--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,1 +1,43 @@
 <p>footer works!</p>
+<footer>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-5 align-self-center ">
+        <ul class="texto">
+          <li style="margin-right: 50px">Información legal</li>
+          <li>Política de privacidad</li>
+        </ul>
+      </div>
+      <div class="col-2 align-self-center" style="margin-left: 50px">
+        <ul class="texto">
+          <li>&copy; 2023 Laura García</li>
+        </ul>
+      </div>
+      <div class="col d-flex justify-content-end ">
+        <ul class="images align-self-center ">
+          <li><img src="../../../assets/twitter.png"></li>
+          <li><img src="../../../assets/instagram.png"></li>
+          <li><img src="../../../assets/linkedln.png"></li>
+          <li><img src="../../../assets/email.png"></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- <div>
+    <ul>
+      <li>Información legal</li>
+      <li>Política de privacidad</li>
+      <li>&copy; 2023 Laura García</li>
+      <ul>
+        <li>
+          <img src="../../../assets/twitter.png">
+          <img src="../../../assets/instagram.png">
+          <img src="../../../assets/linkedln.png">
+          <img src="../../../assets/email.png">
+        </li>
+      </ul>
+    </ul>
+
+  </div> -->
+
+</footer>
