navbar done, fonts added

--- a/frontend/src/app/pages/landing-page/landing-page.component.html
+++ b/frontend/src/app/pages/landing-page/landing-page.component.html
@@ -1,6 +1,18 @@
-<p>landing-page works!</p>
-<div class="alert alert-primary" role="alert">
-  This is a primary alert—check it out!
+<div class="container-fluid">
+  <img src="../../../assets/cabeza.svg">
+  <div class="bocadillo">
+    No sé si esto quedará bien
+  </div>
+
+  <div class="bocadillo">
+    No sé si esto quedará bien
+  </div>
+  <div class="bocadillo1">
+    No sé si esto quedará bien
+  </div>
+  <div class="bocadillo2">
+    No sé si esto quedará bien
+  </div>
 </div>
-<button class="btn btn-danger">Prueba</button>
+
 <app-footer></app-footer>
