--- a/frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,1 +1,10 @@
-<p>nav-bar works!</p>
+<div class="container-fluid">
+  <div class="row justify-content-between">
+    <div class="col-5">
+        <img src="../../../assets/logotipo.svg">
+    </div>
+    <div class="col-5 d-flex align-self-center justify-content-end">
+      <button type="button" class="btn btn-primary">Iniciar sesión</button>
+    </div>
+  </div>
+</div>
