--- a/frontend/src/app/pages/landing-page/landing-page.component.html
+++ b/frontend/src/app/pages/landing-page/landing-page.component.html
@@ -1,18 +1,53 @@
 <div class="container-fluid">
-  <img src="../../../assets/cabeza.svg">
-  <div class="bocadillo">
-    No sé si esto quedará bien
+  <div class="col">
+    <div class="row altura">
+      <div class="col d-flex align-items-center maxWidth position-relative">
+        <img src="../../../assets/cabeza.svg">
+        <div class="posicion">
+          <div class="fila mb-3 ">
+            <div class="PoppinsSemiBold bocadillo" style="background-color: #B7ABFF;">
+              No sé si esto quedará bien
+            </div>
+            <div class="PoppinsSemiBold bocadillo" style="background-color: #ABE6FF;">
+              Esto es rojo o marrón?
+            </div>
+          </div>
+          <div class="fila mb-3 ">
+            <div class="PoppinsSemiBold bocadillo" style="background-color: #FF9E9E;">
+              De qué color es esto? <span class="Emoji">🤔</span>
+            </div>
+            <div class="PoppinsSemiBold bocadillo" style="background-color: #9FCCBF;">
+              No veo bien la paleta de colores <span class="Emoji">😔</span>
+            </div>
+          </div>
+
+          <div class="PoppinsSemiBold bocadillo" style="background-color: #ACC774; float: none; margin: 0 auto;">
+            El fondo del banner tiene que ser azul claro y las hojas verde oscuro!
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex align-items-center">
+        <div class="col limit">
+          <h1 class="PoppinsBold mb-3">¡Acierta con los colores!</h1>
+          <h3 class="PoppinsMedium mb-3">Si tienes daltonismo y trabajas con colores. Esta aplicación web es para ti</h3>
+          <h5 class="PoppinsRegular mb-5">Deja atrás las confusiones y elige el color adecudo</h5>
+          <!-- <div class="d-flex justify-content-center"> -->
+            <button type="button" class="btn btn-primary text-black">Empezar ahora</button>
+          <!-- </div> -->
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="punto puntoNegro"></div>
+      <div class="punto puntoBlanco"></div>
+      <div class="punto puntoBlanco"></div>
+      <div class="punto puntoBlanco"></div>
+    </div>
   </div>
 
-  <div class="bocadillo">
+  <!-- <div class="bocadillo2">
     No sé si esto quedará bien
-  </div>
-  <div class="bocadillo1">
-    No sé si esto quedará bien
-  </div>
-  <div class="bocadillo2">
-    No sé si esto quedará bien
-  </div>
+  </div> -->
 </div>
 
 <app-footer></app-footer>
