--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -14,10 +14,10 @@
       </div>
       <div class="col d-flex justify-content-end ">
         <ul class="images align-self-center ">
-          <li><img src="../../../assets/twitter.png"></li>
-          <li><img src="../../../assets/instagram.png"></li>
-          <li><img src="../../../assets/linkedln.png"></li>
-          <li><img src="../../../assets/email.png"></li>
+          <li><img src="../../../assets/img/twitter.png"></li>
+          <li><img src="../../../assets/img/instagram.png"></li>
+          <li><img src="../../../assets/img/linkedln.png"></li>
+          <li><img src="../../../assets/img/email.png"></li>
         </ul>
       </div>
     </div>
